--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"></script>
-    <script src="jquery-ui-1.8.18.custom.min.js"></script>
+	<script src="js/jquery-1.7.1-min.js"></script>
+	<script src="js/ember-0.9.6.min.js"></script>
+    <script src="js/jquery-ui-1.8.18.custom.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="app.js"></script>
+    <script src="js/geocamMaps.js"></script>
 </head>
   
   <body>
 	
-<div id="pageHeader">
-
-<div id="navBar">
-
-</div>
-</div>
+	<div id="pageHeader">
+		<div id="topBar">
+		
+		</div>
+		<div id="navBar">
+		
+		</div>
+	</div>
 
     <div id="contents">
 
