--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
 
         		</tr>
         	</table>
-        	</script>
+        	
             <form style="display: inline" action="#divModalDialog1" method="get"><button>Back</button></form>
-            <form style="display: inline" action="#" method="get"><button>Next</button></form>
-        </div>
+            <form style="display: inline" action="#" method="get" {{action create target="GeocamResponderMaps.NewFileController"}}><button >Next</button></form>
+        	</script>
+		</div>
         
     </div>
 
