buttons and minor fixes

--- a/undo.html
+++ b/undo.html
@@ -13,7 +13,7 @@
 	<script src="js/ember-0.9.6.min.js"></script>
     <script src="js/jquery-ui-1.8.18.custom.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="js/geocamMaps.js"></script>
+    <script src="js/undo.js"></script>
     
 <style type="text/css">
 
