--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                	<div class="columnHeader">
                	    <script type="text/x-handlebars">
         				{{GeocamResponderMaps.name}}
-						
         			</script>
-               		<div>Current Map Set</div>
+               			<div id="mapSetName">
+               			</div>
                	</div>
 
         		
