changed modals from % to fixed size. Added create new button

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         	
         	<div id="selectFile">
         		<script type="text/x-handlebars">
-        			<input type="file" id="fileUploadButton" onchange="GeocamResponderMaps.NewFileController.localFileSelect();"></input>
+        			<input type="file" id="fileUploadButton" name="fileUploadButton" onchange="GeocamResponderMaps.NewFileController.localFileSelect();"></input>
 				</script>
         	</div>
         	<script type="text/x-handlebars">
