--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         		</tr>
         		<tr>
         			<td>
-        				<h3>Type</h3>
+        				<h3>Type*</h3>
         			</td>
         			<td>
-        				{{view GeocamResponderMaps.FormInformation placeholder="Type" valueBinding="GeocamResponderMaps.NewFileController.type"}}
+        				{{view GeocamResponderMaps.FormInformation placeholder="Type*" valueBinding="GeocamResponderMaps.NewFileController.type"}}
         			</td>
 
         		</tr>
