switched from google api2 to api3

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
     <link rel="stylesheet" href="style/styles.css">
-    <script src="http://maps.google.com/maps?file=api&amp;v=1&amp;key=ABQIAAAAiXhYsUO9RgWKdoXKXPqdKhSMjqY0RaaYrOmXcgkB9Xn9c3Qp4RQh_tINErbe1M_33TpGZubgmGadLw" type="text/javascript"></script>
-	<script src="js/jquery-1.7.1-min.js"></script>
+    <script src="js/jquery-1.7.1-min.js"></script>
 	<script src="js/ember-0.9.8.1.min.js"></script>
     <script src="js/jquery-ui-1.8.18.custom.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
@@ -30,7 +29,9 @@
 		<img src="icons/responderMapsLogo.png">
 		</div>
 		<div id="navBar">
-		
+		<span style= "font-weight: bold; padding-right: 20px; padding-left: 5px; "><a>Welcome</a></span>
+		<span style= "font-weight: bold; padding-right: 20px; padding-left: 5px; "><a>Dashboard</a></span>
+		<span style= "font-weight: bold; padding-right: 20px; padding-left: 5px; "><a>Login</a></span>
 		</div>
 	</div>
 
